[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["suganuma-koji <suganuma_koji@r.recruit.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
scikit-learn = "^0.23.2"
pandas = "^1.1.5"
papermill = "^2.2.2"
pandas-profiling = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
